--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>My First Web Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Web Page</title>
 </head>
 <body>
- <h1>Hi! I am John Cyrus Yleaña</h1>
+    <h1>Hi! I am John Cyrus Yleana</h1>
+    <h1>HTML Tasks</h1>
+    <ol>
+        <li><a href="YleanaExplorePHTours.html">Explore PH Tours</a></li>
+        <li><a href="YleanaCourseSchedule.html">2nd Term Course Schedule</a></li>
+    </ol>
 </body>
 </html>
