--- a/YleanaCourseSchedule.html
+++ b/YleanaCourseSchedule.html
@@ -1,260 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Yleaña Schedule</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-        <style>
-            /* General Page Styling */
-            body {
-                margin: 0;
-                font-family: 'Montserrat', sans-serif;
-                overflow: hidden;
-                background: radial-gradient(circle at center, #000428, #004e92, #191970);
-                animation: galaxyScroll 40s ease infinite;
-                background-size: 200% 200%;
-                color: white;
-            }
+<head>
+    <title>Yleaña Schedule</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <style>
+        /* General Page Styling */
+        body {
+            margin: 0;
+            font-family: 'VT323', monospace;
+            background-color: black;
+            color: #00FF41;
+            overflow: hidden;
+            text-align: center; /* Center align text */
+        }
 
-            @keyframes galaxyScroll {
-                0% {
-                    background-position: 0% 50%;
-                }
-                50% {
-                    background-position: 100% 50%;
-                }
-                100% {
-                    background-position: 0% 50%;
-                }
-            }
+        /* Matrix Background */
+        .matrix {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: black;
+            overflow: hidden;
+            z-index: -3;
+        }
 
-            /* Parallax Stars */
-            .stars {
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: transparent;
-                background-image: radial-gradient(white 1px, transparent 1px);
-                background-size: 5px 5px;
-                animation: starsParallax 60s linear infinite;
-                z-index: -3;
-            }
+        .matrix div {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background: #00FF41;
+            animation: fall linear infinite;
+            animation-duration: calc(1s * var(--i));
+        }
 
-            @keyframes starsParallax {
-                0% {
-                    transform: translateY(0);
-                }
-                100% {
-                    transform: translateY(-500px);
-                }
+        @keyframes fall {
+            0% {
+                transform: translateY(-100%);
             }
-
-            /* Animated Moon Orbit */
-            .moon {
-                position: absolute;
-                width: 100px;
-                height: 100px;
-                background: radial-gradient(circle, #fefefe 60%, #e3e1e1 90%);
-                border-radius: 50%;
-                box-shadow: 0 0 20px 5px rgba(255, 255, 255, 0.5);
-                top: 50px;
-                left: calc(50% - 50px);
-                animation: moonOrbit 15s linear infinite;
-                z-index: -2;
+            100% {
+                transform: translateY(100vh);
             }
+        }
 
-            @keyframes moonOrbit {
-                0% {
-                    transform: translate(0, 0);
-                }
-                50% {
-                    transform: translate(-200px, 100px);
-                }
-                100% {
-                    transform: translate(0, 0);
-                }
+        /* Hacker Title */
+        h1 {
+            padding: 20px;
+            font-size: 3rem;
+            text-shadow: 0 0 10px #00FF41, 0 0 20px #00FF41, 0 0 30px #00FF41;
+            margin-bottom: 20px;
+            display: inline-block;
+        }
+
+        /* 3D Table Styling */
+        table {
+            width: 60%;
+            margin:30px auto;
+            border-collapse: collapse;
+            background: linear-gradient(135deg, rgba(0, 0, 0, 0.8), rgba(0, 255, 65, 0.2));
+            border: 1px solid #00FF41;
+            border-radius: 15px;
+            box-shadow: 0 15px 30px rgba(0, 255, 65, 0.5), 0 5px 10px rgba(0, 255, 65, 0.7);
+            transform: perspective(1000px) rotateX(10deg) rotateY(10deg);
+            transition: all 0.3s ease-in-out;
+        }
+
+        table:hover {
+            transform: perspective(1000px) rotateX(5deg) rotateY(5deg);
+            box-shadow: 0 15px 35px rgba(0, 255, 65, 0.7), 0 10px 20px rgba(0, 255, 65, 0.9);
+        }
+
+        @keyframes tableRotate {
+            0% {
+                transform: rotateX(20deg) rotateY(15deg);
             }
-
-            /* Drizzle Animation */
-            .rain {
-                position: fixed;
-                width: 100%;
-                height: 100%;
-                background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.1));
-                background-size: 1px 20px;
-                animation: drizzle 1s linear infinite;
-                z-index: -1;
+            50% {
+                transform: rotateX(25deg) rotateY(20deg);
             }
-
-            @keyframes drizzle {
-                0% {
-                    background-position: 0 0;
-                }
-                100% {
-                    background-position: 0 20px;
-                }
+            100% {
+                transform: rotateX(20deg) rotateY(15deg);
             }
+        }
 
-            /* Page Title */
-            h1 {
-                text-align: center;
-                padding: 20px;
-                text-transform: uppercase;
-                font-weight: 700;
-                letter-spacing: 1px;
-                z-index: 1;
-                text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(0, 128, 255, 0.8);
-            }
+        th, td {
+            padding: 20px;
+            text-align: center;
+            border: 1px solid #00FF41;
+            color: #00FF41;
+            text-shadow: 0 0 10px #00FF41;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
 
-            /* Schedule Table */
+        th {
+            font-weight: bold;
+            text-transform: uppercase;
+            background: linear-gradient(135deg, rgba(0, 255, 65, 0.6), rgba(0, 0, 0, 0.6));
+        }
+
+        td {
+            background: rgba(0, 0, 0, 0.6);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        td:hover {
+            transform: translateZ(10px) scale(1.1);
+            box-shadow: 0 0 20px #00FF41;
+        }
+
+        td.subject {
+            background: rgba(0, 255, 65, 0.3);
+            border-radius: 5px;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        td.subject:hover {
+            transform: translateZ(10px) scale(1.1);
+            box-shadow: 0 0 25px rgba(0, 255, 65, 0.7);
+        }
+
+        td.time {
+            background: rgba(255, 255, 255, 0.1);
+            text-transform: uppercase;
+            font-weight: bold;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
             table {
-                width: 90%;
-                margin: 20px auto;
-                border-collapse: collapse;
-                background: rgba(0, 0, 0, 0.6);
-                backdrop-filter: blur(10px);
-                border-radius: 8px;
-                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-                z-index: 1;
-                overflow: hidden;
+                width: 100%;
+                font-size: 0.9em;
             }
 
-            th {
-                padding: 15px;
-                text-align: center;
-                text-transform: uppercase;
-                font-weight: bold;
-                color: #fff;
-                background: linear-gradient(to right, #30cfd0, #330867);
-                animation: gradientScroll 6s infinite linear;
+            th, td {
+                padding: 10px;
             }
+        }
+    </style>
+</head>
+<body>
+    <div class="matrix">
+        <!-- JavaScript will populate this with falling elements -->
+    </div>
+    <h1>A221 Schedule for Yleaña 2nd Term Course</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Time</th>
+                <th>Mon</th>
+                <th>Tue</th>
+                <th>Wed</th>
+                <th>Thu</th>
+                <th>Fri</th>
+                <th>Sat</th>
+                <th>Sun</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>8:15 AM - 9:30 AM</td>
+                <td>.......</td>
+                <td>.......</td>
+                <td class="subject">CS107<br>A221<br>R411</td>
+                <td>.......</td>
+                <td class="subject">IT103<br>A221<br>R411</td>
+                <td>.......</td>
+                <td>.......</td>
+            </tr>
+            <tr>
+                <td>8:15 AM - 9:30 AM</td>
+                <td>.......</td>
+                <td>.......</td>
+                <td class="subject">CS107<br>A221<br>R411</td>
+                <td>.......</td>
+                <td class="subject">IT103<br>A221<br>R411</td>
+                <td>.......</td>
+                <td>.......</td>
+            </tr>
+            <tr>
+                <td>10:45 AM - 12:00 PM</td>
+                <td>.......</td>
+                <td>.......</td>
+                <td class="subject">CS122<br>A221<br>R502</td>
+                <td>.......</td>
+                <td class="subject">CS124<br>A221<br>R504</td>
+                <td>.......</td>
+                <td>.......</td>
+            </tr>
+            <tr>
+                <td>1:15 PM</td>
+                <td>.......</td>
+                <td class="subject">HUM039<br>A221<br>V406</td>
+                <td>.......</td>
+                <td class="subject">HUM039<br>A221<br>V406</td>
+                <td>.......</td>
+                <td class="subject">HUM039<br>A221<br>V406</td>
+                <td>.......</td>
+            </tr>
+            <tr>
+                <td>2:30 PM</td>
+                <td class="subject">CS107L<br>A221<br>R602</td>
+                <td class="subject">SS086<br>A221<br>V406</td>
+                <td>.......</td>
+                <td class="subject">IT103L<br>A221<br>R604</td>
+                <td>.......</td>
+                <td class="subject">SS086<br>A221<br>V406</td>
+                <td>.......</td>
+            </tr>
+            <tr>
+                <td>3:45 PM - 5:00 PM</td>
+                <td class="subject">CS107L<br>A221<br>R602</td>
+                <td>.......</td>
+                <td>.......</td>
+                <td class="subject">IT103L<br>A221<br>R604</td>
+                <td>.......</td>
+                <td>.......</td>
+                <td>.......</td>
+            </tr>
+        </tbody>
+    </table>
 
-            @keyframes gradientScroll {
-                0% {
-                    background-position: 0% 50%;
-                }
-                50% {
-                    background-position: 100% 50%;
-                }
-                100% {
-                    background-position: 0% 50%;
-                }
-            }
+    <script>
+        // JavaScript to create matrix-like falling effect
+        const matrix = document.querySelector('.matrix');
+        const createRainDrop = () => {
+            const rainDrop = document.createElement('div');
+            rainDrop.style.left = Math.random() * window.innerWidth + 'px';
+            rainDrop.style.animationDuration = Math.random() * 3 + 2 + 's';
+            rainDrop.style.animationDelay = Math.random() * 5 + 's';
+            matrix.appendChild(rainDrop);
+            setTimeout(() => {
+                matrix.removeChild(rainDrop);
+            }, 8000);
+        }
 
-            td {
-                padding: 15px;
-                text-align: center;
-                border: 1px solid rgba(255, 255, 255, 0.2);
-                color: #fff;
-                transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
-            }
-
-            td.subject {
-                background-color: rgba(30, 144, 255, 0.7);
-                font-weight: bold;
-                border-radius: 5px;
-                box-shadow: 0 0 10px rgba(30, 144, 255, 0.8);
-                transition: transform 0.3s ease, box-shadow 0.3s ease;
-            }
-
-            td.subject:hover {
-                transform: scale(1.1);
-                box-shadow: 0 10px 20px rgba(30, 144, 255, 0.7);
-                background-color: rgba(72, 61, 139, 0.9);
-            }
-
-            td.time {
-                background: rgba(255, 255, 255, 0.1);
-                text-transform: uppercase;
-                font-weight: bold;
-                box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-            }
-        </style>
-    </head>
-    <body>
-        <div class="stars"></div>
-        <div class="moon"></div>
-        <div class="rain"></div>
-        <h1>A221 Schedule for Yleaña 2nd Term Course</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>Time</th>
-                    <th>Mon</th>
-                    <th>Tue</th>
-                    <th>Wed</th>
-                    <th>Thu</th>
-                    <th>Fri</th>
-                    <th>Sat</th>
-                    <th>Sun</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="time" rowspan="2">8:15 AM - 9:30 AM</td>
-                    <td class="dots">............................</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">CS107<br>A221<br>R411</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">IT103<br>A221<br>R411</td>
-                    <td class="dots">............................</td>
-                    <td class="dots">............................</td>
-                </tr>
-                <tr>
-                    <td class="dots">............................</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">CS107<br>A221<br>R411</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">IT103<br>A221<br>R411</td>
-                    <td class="dots">............................</td>
-                    <td class="dots">............................</td>
-                </tr>
-                <tr>
-                    <td class="time">10:45 AM - 12:00 PM</td>
-                    <td class="dots">............................</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">CS122<br>A221<br>R502</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">CS124<br>A221<br>R504</td>
-                    <td class="dots">............................</td>
-                    <td class="dots">............................</td>
-                </tr>
-                <tr>
-                    <td class="time">1:15 PM</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">HUM039<br>A221<br>V406</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">HUM039<br>A221<br>V406</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">HUM039<br>A221<br>V406</td>
-                    <td class="dots">............................</td>
-                </tr>
-                <tr>
-                    <td class="time">2:30 PM</td>
-                    <td class="subject">CS107L<br>A221<br>R602</td>
-                    <td class="subject">SS086<br>A221<br>V406</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">IT103L<br>A221<br>R604</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">SS086<br>A221<br>V406</td>
-                    <td class="dots">............................</td>
-                </tr>
-                <tr>
-                    <td class="time">3:45 PM - 5:00 PM</td>
-                    <td class="subject">CS107L<br>A221<br>R602</td>
-                    <td class="dots">............................</td>
-                    <td class="dots">............................</td>
-                    <td class="subject">IT103L<br>A221<br>R604</td>
-                    <td class="dots">............................</td>
-                    <td class="dots">............................</td>
-                    <td class="dots">............................</td>
-                </tr>
-            </tbody>
-        </table>
-    </body>
+        setInterval(createRainDrop, 100);
+    </script>
+</body>
 </html>
