--- a/index.html
+++ b/index.html
@@ -4,151 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #2c3e50, #34495e);
-            color: #ecf0f1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            overflow: hidden;
-            animation: slideIn 1s ease-out forwards; /* Slide in effect */
-        }
-
-        @keyframes slideIn {
-            0% {
-                opacity: 0;
-                transform: translateY(50%);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        h1 {
-            text-align: center;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-            margin-bottom: 20px;
-            font-size: 3rem;
-            opacity: 0;
-            animation: fadeInScale 1.5s ease-out 0.5s forwards; /* Scale and fade effect */
-        }
-
-        @keyframes fadeInScale {
-            0% {
-                opacity: 0;
-                transform: scale(0.8);
-            }
-            100% {
-                opacity: 1;
-                transform: scale(1);
-            }
-        }
-
-        ol {
-            list-style: none;
-            padding: 0;
-            margin: 0 auto;
-            text-align: center;
-        }
-
-        ol li {
-            margin: 15px 0;
-            font-size: 1.2rem;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: popIn 1s ease-out forwards;
-        }
-
-        ol li:nth-child(1) {
-            animation-delay: 1s; /* Delays the first item */
-        }
-
-        ol li:nth-child(2) {
-            animation-delay: 1.2s; /* Delays the second item */
-        }
-
-        @keyframes popIn {
-            0% {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        a {
-            display: inline-block;
-            padding: 15px 30px;
-            text-decoration: none;
-            background: #e74c3c;
-            color: white;
-            text-align: center;
-            border-radius: 8px;
-            font-size: 1.1rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease, box-shadow 0.3s ease, color 0.3s ease, text-shadow 0.3s ease;
-        }
-
-        a:hover {
-            transform: scale(1.05); /* Slight growth on hover */
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
-            color: #ffffff; /* Hover color change */
-            text-shadow: 0 0 10px #000000, 0 0 20px #000000; /* Glowing effect */
-            border-bottom: 3px solid #000000; /* Glowing underline */
-        }
-
-        a:active {
-            transform: scale(1);
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            ol {
-                width: 80%;
-            }
-
-            ol li {
-                font-size: 1.1rem;
-            }
-
-            a {
-                font-size: 1rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            body {
-                padding: 10px;
-            }
-
-            h1 {
-                font-size: 1.5rem;
-            }
-
-            ol li {
-                font-size: 1rem;
-            }
-
-            a {
-                font-size: 0.9rem;
-            }
-        }
-    </style>
 </head>
 <body>
-    <h1>Hi! I am John Cyrus Yleana</h1>
+    <h1>Hi! I am John Cyrus Yleaña</h1>
     <h1>HTML Tasks</h1>
     <ol>
         <li><a href="YleanaExplorePHTours.html" onclick="navigateWithFade(event, 'YleanaExplorePHTours.html')">Explore PH Tours</a></li>
@@ -158,10 +16,7 @@
     <script>
         function navigateWithFade(event, url) {
             event.preventDefault();
-            document.body.style.opacity = '0';  // Fade out the body content
-            setTimeout(function() {
-                window.location.href = url; // Redirect after the fade-out transition
-            }, 1000); // Timeout duration matches the CSS transition time
+            window.location.href = url; // Redirect
         }
     </script>
 </body>
