--- a/portfolio.html
+++ b/portfolio.html
@@ -66,21 +66,21 @@ Feel free to tweak it further to match your personality or goals! 😊
             <a href="https://github.com/cyxkira29/cyxkira29.github.io" target="_blank">
                 <i class="project-icon fas fa-laptop-code"></i>
                 <h3>Project 1</h3>
-                <p>Created responsive and modern websites.</p>
+                <p>Environment Setup.</p>
             </a>
         </div>
         <div class="project-card">
             <a href="https://github.com/cyxkira29/Week-5-Activity-4" target="_blank">
                 <i class="project-icon fas fa-paint-brush"></i>
                 <h3>Project 2</h3>
-                <p>Designed intuitive interfaces for better user experience.</p>
+                <p>Activity 4 Week 5.</p>
             </a>
         </div>
         <div class="project-card">
             <a href="https://github.com/cyxkira29/Yleana_JS_Activities" target="_blank">
                 <i class="project-icon fas fa-database"></i>
                 <h3>Project 3</h3>
-                <p>Worked with APIs, databases, and server-side logic.</p>
+                <p>Activity 5 Week 5.</p>
             </a>
         </div>
     </div>
