--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section>
             <h2>IT103 Summative Part 3</h2>
             <ol>
-                <li><a href="Act5/portfolio.html">Course Digital Portfolio</a></li>
+                <li><a href="portfolio.html">Course Digital Portfolio</a></li>
             </ol>
         </section>
     </div>
