--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,7 @@
         <div class="about-container">
             <img src="cy.jpg" alt="Profile Picture">
             <p>
-                Hi there! I’m John Cyrus M. Yleaña, a passionate and driven Computer Science student with a deep curiosity for technology and innovation. Currently immersed in the world of algorithms, software development, and emerging tech trends, I thrive on transforming complex problems into elegant solutions. My academic journey has fueled my interest in areas like artificial intelligence, machine learning, and full-stack development, while hands-on projects and hackathons have sharpened my coding skills and collaborative mindset.
-
-Beyond the screen, I’m an advocate for lifelong learning—whether it’s diving into open-source contributions, exploring new programming frameworks, or staying updated with the latest breakthroughs in tech. When I’m not debugging code or brainstorming ideas, you’ll find me gaming, reading tech blogs, or enjoying outdoor adventures.
-
-I’m eager to connect, collaborate, and contribute to impactful projects that push the boundaries of what technology can achieve. Let’s build the future, one line of code at a time!
-Feel free to tweak it further to match your personality or goals! 😊
+                Hi! I’m John Cyrus M. Yleaña, a Computer Science student with a passion for coding, problem-solving, and exploring new technologies. I enjoy building projects, experimenting with different programming languages, and diving into topics like artificial intelligence and full-stack development. Right now, I’m focused on improving my software development skills, working on hands-on projects, and participating in hackathons to challenge myself. I also love collaborating with others, sharing ideas, and learning from different perspectives. Outside of coding, you’ll probably find me gaming, watching tech videos, or exploring new things that spark my curiosity. I’m always open to new opportunities, collaborations, and discussions about tech—let’s connect and create something amazing!
             </p>
         </div>
     </section>
