--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <section>
             <h2>HTML Tasks</h2>
             <ol>
-                <li><a href="YleanaExplorePHTours.html">Explore PH Tours</a></li>
-                <li><a href="YleanaCourseSchedule.html">2nd Term Course Schedule</a></li>
+                <li><a href="/ExplorePHTours/YleanaExplorePHTours.html">Explore PH Tours</a></li>
+                <li><a href="/CourseSchedule/YleanaCourseSchedule.html">2nd Term Course Schedule</a></li>
             </ol>
         </section>
 
@@ -33,7 +33,7 @@
         <section>
             <h2>CSS Tasks</h2>
             <ol>
-                <li><a href="Yleana_W5_ACT4.html">Yleaña Week 5 CSS Activity 1-4</a></li>
+                <li><a href="/Activity 4/Yleana_W5_ACT4.html">Yleaña Week 5 CSS Activity 1-4</a></li>
             </ol>
         </section>
 
@@ -41,7 +41,7 @@
         <section>
             <h2>JS Tasks</h2>
             <ol>
-                <li><a href="Yleana_W5_ACT5.html">Yleaña Week 5 JS Activity 1-4</a></li>
+                <li><a href="/Activity 5/Yleana_W5_ACT5.html">Yleaña Week 5 JS Activity 1-4</a></li>
             </ol>
         </section>
 
@@ -49,7 +49,7 @@
         <section>
             <h2>IT103 Summative Part 3</h2>
             <ol>
-                <li><a href="portfolio.html">Course Digital Portfolio</a></li>
+                <li><a href="/Portfolio/portfolio.html">Course Digital Portfolio</a></li>
             </ol>
         </section>
     </div>
