--- a/Activity 5/js01.html
+++ b/Activity 5/js01.html
@@ -11,6 +11,6 @@
     <p id="count">0</p>
     <button id="countButton">Count Up</button>
 
-    <script src="js01.js"></script>
+    <script src="/javascript/js01.js"></script>
 </body>
 </html>
