--- a/Activity 5/js02.html
+++ b/Activity 5/js02.html
@@ -14,6 +14,6 @@
     </form>
     <h3>Your Tasks:</h3>
     <ul id="taskList"></ul>
-    <script src="js02.js"></script>
+    <script src="/javascript/js02.js"></script>
 </body>
 </html>
