--- a/Activity 5/js04.html
+++ b/Activity 5/js04.html
@@ -20,6 +20,6 @@
     </form>
     <p id="result"></p>
 
-    <script src="JS04.js"></script>
+    <script src="/javascript/js04.js"></script>
 </body>
 </html>
