--- a/Activity 4/Yleana_W5_ACT4.html
+++ b/Activity 4/Yleana_W5_ACT4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Activity4.css">
+    <link rel="stylesheet" href="/css/Activity4.css">
     <title>Week 5 Activity 4</title>
 </head>
 <body>
