--- a/Activity 4/act4.html
+++ b/Activity 4/act4.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colored Boxes</title>
-    <link rel="stylesheet" href="act4.css">
+    <link rel="stylesheet" href="/css/act4.css">
 </head>
 
 <body>
