--- a/Activity 4/basemodel.html
+++ b/Activity 4/basemodel.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Box  Model</title>
-  <link rel="stylesheet" href="basemodel.css">
+  <link rel="stylesheet" href="/css/basemodel.css">
 </head>
 <body>
   <div class="box red">One</div>
