--- a/Activity 5/Yleana_W5_ACT5.html
+++ b/Activity 5/Yleana_W5_ACT5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 5 Activity 5</title>
-    <link rel="stylesheet" href="Activity5.css">
+    <link rel="stylesheet" href="/css/Activity5.css">
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,6 @@
         </section>
     </div>
 
-    <script src="Activity5.js"></script>
+    <script src="/javascript/Activity5.js"></script>
 </body>
 </html>
