--- a/Activity 5/js03.html
+++ b/Activity 5/js03.html
@@ -20,6 +20,6 @@
     </form>
     <p id="message"></p>
 
-    <script src="JS03.js"></script>
+    <script src="/javascript/js03.js"></script>
 </body>
 </html>
