--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="/css/portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
@@ -99,7 +99,7 @@
     <!-- Scroll to Top Button -->
     <button id="scrollToTop"><i class="fas fa-arrow-up"></i></button>
 
-    <script src="portfolio.js"></script>
+    <script src="/javascript/portfolio.js"></script>
 
 </body>
 </html>
