--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         <section>
             <h2>CSS Tasks</h2>
             <ol>
-                <li><a href="/Activity 4/Yleana_W5_ACT4.html">Yleaña Week 5 CSS Activity 1-4</a></li>
-            </ol>
+                <li><a href="/Activity 4/index.html">Yleaña Week 5 CSS Activity 1-4</a></li>
+            </ol>tivity 4/i
         </section>
 
         <!-- JS Tasks Section -->
         <section>
             <h2>JS Tasks</h2>
             <ol>
-                <li><a href="/Activity 5/Yleana_W5_ACT5.html">Yleaña Week 5 JS Activity 1-4</a></li>
+                <li><a href="/Activity 5/index.html">Yleaña Week 5 JS Activity 1-4</a></li>
             </ol>
         </section>
 
