--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -46,10 +46,9 @@
         <ul class="skills-list">
             <li><i class="fas fa-code"></i> HTML, CSS, JavaScript</li>
             <li><i class="fab fa-react"></i> React.js & Next.js</li>
-            <li><i class="fab fa-node"></i> Node.js & Express.js</li>
-            <li><i class="fas fa-database"></i> MongoDB & SQL</li>
+            <li><i class="fas fa-database"></i> MySQL/SQL</li>
             <li><i class="fas fa-mobile-alt"></i> Responsive Web Design</li>
-            <li><i class="fas fa-cloud"></i> Cloud Computing</li>
+            <li><i class="fas fa-cloud"></i> Java & Python</li>
         </ul>
     </section>
 
