--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -31,6 +31,7 @@
 
     <!-- About Section -->
     <section class="about" id="about">
+        <div id="particles-about"></div>
         <h2>About Me</h2>
         <div class="about-container">
             <img src="cy.jpg" alt="Profile Picture">
@@ -79,6 +80,51 @@
     </div>
 </section>
 
+<section id="questions">
+    <div id="particles-questions"></div>
+    <h2>Following Questions</h2>
+    <ol>
+        <li>
+            <strong class="question">How does your portfolio show your skills in HTML, CSS, and JavaScript?</strong>
+            <p class="answer">
+                My portfolio demonstrates my front-end development skills through:
+                <ul>
+                    <li>Semantic HTML for accessibility and clean structure.</li>
+                    <li>Responsive CSS with Flexbox and Grid for adaptive design.</li>
+                    <li>JavaScript for dynamic elements, animations, and interactivity.</li>
+                </ul>
+                The projects showcase real-world applications of these technologies, improving my problem-solving and coding efficiency.
+            </p>
+        </li>
+
+        <li>
+            <strong class="question">What project awards and assignments highlight your progress in the program?</strong>
+            <p class="answer">
+                My key projects include:
+                <ul>
+                    <li><strong>Environment Setup</strong>: Understanding project structures and version control.</li>
+                    <li><strong>Activity 4 (Week 5)</strong>: Working with advanced CSS and JavaScript interactions.</li>
+                    <li><strong>Activity 5 (Week 5)</strong>: Implementing JavaScript logic and DOM manipulation.</li>
+                </ul>
+                Each project reflects my learning process, from basic structure to more advanced interactivity.
+            </p>
+        </li>
+
+        <li>
+            <strong class="question">How does your portfolio creatively showcase your web programming knowledge?</strong>
+            <p class="answer">
+                My portfolio combines design and functionality, demonstrating:
+                <ul>
+                    <li>Custom animations for engaging user experience.</li>
+                    <li>Interactive elements, such as smooth scrolling and particle effects.</li>
+                    <li>Responsive layout that adapts across different devices.</li>
+                    <li>API integration and real-time features (planned for future projects).</li>
+                </ul>
+                I constantly refine my portfolio to reflect industry standards and creativity.
+            </p>
+        </li>
+</section>
+
 
     <!-- Contact Section -->
     <section class="contact" id="contact">
@@ -97,6 +143,7 @@
     <!-- Scroll to Top Button -->
     <button id="scrollToTop"><i class="fas fa-arrow-up"></i></button>
 
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="/javascript/portfolio.js"></script>
 
 </body>
