--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -36,8 +36,7 @@
         <div class="about-container">
             <img src="cy.jpg" alt="Profile Picture">
             <p>
-                Hi! I’m John Cyrus M. Yleaña, a Computer Science student with a passion for coding, problem-solving, and exploring new technologies. I enjoy building projects, experimenting with different programming languages, and diving into topics like artificial intelligence and full-stack development. Right now, I’m focused on improving my software development skills, working on hands-on projects, and participating in hackathons to challenge myself. I also love collaborating with others, sharing ideas, and learning from different perspectives. Outside of coding, you’ll probably find me gaming, watching tech videos, or exploring new things that spark my curiosity. I’m always open to new opportunities, collaborations, and discussions about tech—let’s connect and create something amazing!
-            </p>
+                Hi! I’m John Cyrus M. Yleaña, a Computer Science student passionate about coding, problem-solving, and full-stack development. I enjoy building projects, challenging myself through hackathons, and collaborating with others. Outside of coding, I’m into gaming, tech videos, and exploring new interests. Let’s connect and create something amazing! 🚀            </p>
         </div>
     </section>
 
@@ -57,21 +56,21 @@
     <h2>My Projects</h2>
     <div class="project-grid">
         <div class="project-card">
-            <a href="https://github.com/cyxkira29/cyxkira29.github.io" target="_blank">
+            <a href="/index.html" target="_blank">
                 <i class="project-icon fas fa-laptop-code"></i>
                 <h3>Project 1</h3>
                 <p>Environment Setup.</p>
             </a>
         </div>
         <div class="project-card">
-            <a href="https://github.com/cyxkira29/Week-5-Activity-4" target="_blank">
+            <a href="/Activity 4/index.html" target="_blank">
                 <i class="project-icon fas fa-paint-brush"></i>
                 <h3>Project 2</h3>
                 <p>Activity 4 Week 5.</p>
             </a>
         </div>
         <div class="project-card">
-            <a href="https://github.com/cyxkira29/Yleana_JS_Activities" target="_blank">
+            <a href="/Activity 5/index.html" target="_blank">
                 <i class="project-icon fas fa-database"></i>
                 <h3>Project 3</h3>
                 <p>Activity 5 Week 5.</p>
