--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -48,6 +48,7 @@
             <li><i class="fas fa-database"></i> MySQL/SQL</li>
             <li><i class="fas fa-mobile-alt"></i> Responsive Web Design</li>
             <li><i class="fas fa-cloud"></i> Java & Python</li>
+            <li><i class="fas fa-cloud"></i> C#</li>
         </ul>
     </section>
 
@@ -57,27 +58,42 @@
     <div class="project-grid">
         <div class="project-card">
             <a href="/index.html" target="_blank">
-                <i class="project-icon fas fa-laptop-code"></i>
+                <i class="project-icon fas fa-database"></i>
                 <h3>Project 1</h3>
-                <p>Environment Setup.</p>
+                <p>Environment Setup Activity.</p>
+            </a>
+        </div>
+        <div class="project-card">
+            <a href="/ExplorePHTours/YleanaExplorePHTours.html" target="_blank">
+                <i class="project-icon fas fa-database"></i>
+                <h3>Project 2</h3>
+                <p>ExplorePHTours Activity</p>
+            </a>
+        </div>
+        <div class="project-card">
+            <a href="/CourseSchedule/YleanaCourseSchedule.html" target="_blank">
+                <i class="project-icon fas fa-laptop-code"></i>
+                <h3>Project 3</h3>
+                <p>Course Schedule Activity.</p>
             </a>
         </div>
         <div class="project-card">
             <a href="/Activity 4/index.html" target="_blank">
                 <i class="project-icon fas fa-paint-brush"></i>
-                <h3>Project 2</h3>
+                <h3>Project 4</h3>
                 <p>Activity 4 Week 5.</p>
             </a>
         </div>
         <div class="project-card">
             <a href="/Activity 5/index.html" target="_blank">
                 <i class="project-icon fas fa-database"></i>
-                <h3>Project 3</h3>
+                <h3>Project 5</h3>
                 <p>Activity 5 Week 5.</p>
             </a>
         </div>
     </div>
 </section>
+
 
 <section id="questions">
     <div id="particles-questions"></div>
