--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-        <link rel="stylesheet" href="main.css">
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
 <body>
     <div id="particles-js"></div>
@@ -44,8 +42,13 @@
             </ol>
         </section>
 
-    </div>
+        <section>
+            <h2>M2 Activity</h2>
+            <ol>
+                <li><a href="/W8_Exercise _Yleaña/index.html">WEEK 8 Activity</a></li>
+            </ol>
+        </section>
 
-    <script src="mainscript.js"></script>
+    </div>
 </body>
 </html>
