--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section>
             <h2>JS Tasks</h2>
             <ol>
-                <li><a href="/Activity 5/index.html">Yleaña Week 5 JS Activity 1-4</a></li>
+                <li><a href="/Activity 5/index.html">Yleaña Week 5 JS Activity 1-5 & API</a></li>
             </ol>
         </section>
 
